--- a/css/menu.css
+++ b/css/menu.css
@@ -1,3 +1,5 @@
+
+
 #title_container {
 	margin: 15px;
 	/* height: 60px; */
@@ -45,7 +47,7 @@
 
 #menu.hide .menu_item { 
 	width: 1000px;
-	padding-left: 18px;
+	padding-left: 17px;
 	overflow: hidden;
 }
 
