--- a/css/view_tracking_settings.css
+++ b/css/view_tracking_settings.css
@@ -8,7 +8,7 @@
 }
 
 .setting_ignore_app > .setting_entry {
-	width: calc(100% - 50px);
+	width: calc(100% - 70px);
 	border-width: 1px;
 	margin-right: 0px;
 }
